--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Open Graph Meta Tags for Social Sharing -->
     <meta property="og:title" content="Eventry - Discover Amazing Events">
     <meta property="og:description" content="Find events that ignite your passions and create real connections. Your journey to meaningful experiences starts here.">
-    <meta property="og:image" content="https://joineventry.com/og-image.jpg">
+    <meta property="og:image" content="/src/assets/eventy orange logo.PNG">
     <meta property="og:url" content="https://joineventry.com">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Eventry">
@@ -20,7 +20,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Eventry - Discover Amazing Events">
     <meta name="twitter:description" content="Join, create and discover incredible events near you. Your ultimate event platform.">
-    <meta name="twitter:image" content="https://joineventry.com/og-image.jpg">
+    <meta name="twitter:image" content="/src/assets/eventy orange logo.PNG">
     
     <!-- Additional Meta Tags -->
     <meta name="description" content="Join, create and discover incredible events near you. Your ultimate event platform.">
